[gd_scene load_steps=3 format=3 uid="uid://bc7opgn8v3ort"]

[ext_resource type="Script" path="res://user_interface/buy_menu/SelectedSellOrderContainer.gd" id="1_7yo86"]
[ext_resource type="PackedScene" uid="uid://dsma6nhkei2yg" path="res://user_interface/buy_menu/SellOrderGridItem.tscn" id="2_i85ff"]

[node name="SelectedSellOrderContainer" type="MarginContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 200
script = ExtResource("1_7yo86")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="SellOrder" parent="VBoxContainer" instance=ExtResource("2_i85ff")]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuantitySelector" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DecrementButton" type="Button" parent="VBoxContainer/QuantitySelector"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "-"

[node name="Spacer" type="Control" parent="VBoxContainer/QuantitySelector"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/QuantitySelector"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
text = "0 (X)"
alignment = 1
max_length = 10
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Spacer2" type="Control" parent="VBoxContainer/QuantitySelector"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="IncrementButton" type="Button" parent="VBoxContainer/QuantitySelector"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "+"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Buy"

[connection signal="pressed" from="VBoxContainer/ConfirmButton" to="." method="_on_buy"]
